@@ -1,25 +1,20 @@
 package io.breland.bbagent.server.agent.tools.giphy;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import io.netty.handler.logging.LogLevel;
 import java.time.Duration;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.MediaType;
-import org.springframework.http.client.reactive.ReactorClientHttpConnector;
 import org.springframework.stereotype.Component;
 import org.springframework.web.reactive.function.client.ExchangeStrategies;
 import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
 import org.springframework.web.util.UriBuilder;
 import reactor.core.publisher.Mono;
-import reactor.netty.http.client.HttpClient;
-import reactor.netty.transport.logging.AdvancedByteBufFormat;
 
 @Component
 @Slf4j
@@ -41,18 +36,7 @@ public class GiphyClient {
         ExchangeStrategies.builder()
             .codecs(configurer -> configurer.defaultCodecs().maxInMemorySize(MAX_IN_MEMORY_BYTES))
             .build();
-    HttpClient httpClient =
-        HttpClient.create()
-            .wiretap(
-                "reactor.netty.http.client.HttpClient",
-                LogLevel.INFO,
-                AdvancedByteBufFormat.SIMPLE);
-    this.webClient =
-        WebClient.builder()
-            .baseUrl(baseUrl)
-            .exchangeStrategies(strategies)
-            .clientConnector(new ReactorClientHttpConnector(httpClient))
-            .build();
+    this.webClient = WebClient.builder().baseUrl(baseUrl).exchangeStrategies(strategies).build();
   }
 
   public Optional<GiphyGif> searchTopGif(String query) {
@@ -60,18 +44,18 @@ public class GiphyClient {
     if (gifs.isEmpty()) {
       return Optional.empty();
     }
-    return Optional.of(gifs.get(0));
+    return Optional.of(gifs.getFirst());
   }
 
   public List<GiphyGif> searchGifs(String query, int limit, String rating, String lang) {
     if (apiKey == null || apiKey.isBlank()) {
       log.warn("Giphy API key not configured");
-      return Collections.emptyList();
+      return List.of();
     }
     if (query == null || query.isBlank()) {
-      return Collections.emptyList();
+      return List.of();
     }
-    int safeLimit = Math.max(1, Math.min(limit, 25));
+    int safeLimit = Math.clamp(limit, 1, 25);
     String safeLang = (lang == null || lang.isBlank()) ? "en" : lang;
     try {
       JsonNode response =
@@ -88,7 +72,7 @@ public class GiphyClient {
       return parseGifs(response);
     } catch (Exception e) {
       log.warn("Failed to search giphy for {}", query, e);
-      return Collections.emptyList();
+      return List.of();
     }
   }
 
@@ -136,11 +120,11 @@ public class GiphyClient {
 
   private List<GiphyGif> parseGifs(JsonNode response) {
     if (response == null || response.isNull()) {
-      return Collections.emptyList();
+      return List.of();
     }
     JsonNode data = response.path("data");
     if (!data.isArray()) {
-      return Collections.emptyList();
+      return List.of();
     }
     List<GiphyGif> results = new ArrayList<>();
     for (JsonNode item : data) {
